--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-gym==0.21.0
-stable-baselines3==1.8.0
-sb3-contrib==1.8.0
-pygame==2.3.0
+gym==0.26.2
+stable-baselines3==2.4.0
+sb3-contrib==2.4.0
+pygame==2.6.1
+shimmy==2.0.0
